--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 dependencies{
     testImplementation 'com.intuit.karate:karate-junit5:1.2.0.RC5'
     testImplementation 'net.masterthought:cucumber-reporting:5.7.0'
+    testImplementation 'io.cucumber:cucumber-java:6.10.4'
 }
 
 test{
